Ensure movePrimary does not prevent writes in unsplittable collections

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc4
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-04-29, CAR Team 2024-05-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently we have in a migration observer an assertion to prevent writes if there is a move primary in progress. This does not happen for sharded collections because they are not being moved, but considering the way to move unsplittable unsharded collections is through moveCollection, and SERVER-83925 made the movePrimary coordinator should stop cloning unsplittable collections, we should also prevent unsplittable collection writes to throw if there is a concurrent movePrimary

      We should also increase testing as part of this ticket, by either checking the current FSM implementation of movePrimary and try to make sure that writes for unsplittable collection will not fail while there is a concurrent movePrimary, or add specific tests for this.

            Assignee:
            Pierlauro Sciarelli
            Reporter:
            Marcos José Grillo Ramirez
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: