SERVER-89555 Allow writes on unsplittable collections during movePrimary (#21334)

GitOrigin-RevId: 1c9c67d63818d1509365ffe0bae29a012e765d09